# lambda

./: .gitignore  CLAUDE.md  README.md  flake.nix  image.lisp  input.lisp  lambda.asd  lambda.lisp  layout.lisp  main.lisp  package.lisp  rect.lisp  text.lisp
core/: Cargo.toml
core/src/: app.rs  gpu.rs  lib.rs  main.rs
core/src/shaders/: rect.wgsl
kernel/: Cargo.toml
kernel/src/: app.rs  gpu.rs  input.rs  lib.rs  logger.rs  rect.rs  text.rs
lib/: Cargo.toml
lib/src/: app.rs  gpu.rs  lib.rs
lib/src/systems/: image.rs  input.rs  mod.rs  rect.rs  text.rs
src/: draw.lisp  input.lisp  kernel.lisp  main.lisp  rect.lisp  text.lisp
