[package]
name = "lambda"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = { version = "0.30", default-features = false, features = ["rwh_06", "wayland", "wayland-dlopen"] }
wgpu = { version = "29", default-features = false, features = ["wgsl", "vulkan"] }
pollster = "0.4"
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }

[lib]
crate-type = ["cdylib", "rlib"]
