[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
winit = { version = "0.30", default-features = false, features = ["rwh_06", "wayland", "wayland-dlopen"] }
wgpu = { version = "29", default-features = false, features = ["wgsl", "vulkan"] }

[lib]
crate-type = ["cdylib", "rlib"]

[patch.crates-io]
winit = { git = "https://github.com/svelterust/winit", branch = "allow-recreation" }
